--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.8",
+        "midtrans/midtrans-php": "*",
         "pusher/pusher-php-server": "^7.2",
         "razorpay/razorpay": "2.*",
         "srmklive/paypal": "~3.0",
